--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <script src="./js/jquery.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
 
         <!-- Header:  -->
 
