--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./js/jquery.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
 
         <div class="row" id="contact-header">
             <div class="col-sm-10">
