--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 CSS: <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
                 </div>
-                CSS: <div class="progress">
+                JavaScript: <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
                 </div>
             </div>
